# Kamitoru

./: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_client.rs  db.rs  lib.rs  main.rs  watch_engine.rs
src/components/: dashboard-page.tsx  log-page.tsx  login-page.tsx  profiles-page.tsx  setup-wizard.tsx  sidebar.tsx  usage-page.tsx
src/lib/: config.ts  tauri-api.ts  theme.ts
