[package]
name = "prj002-desktop-client"
version = "0.13.0"
edition = "2021"

[lib]
name = "prj002_desktop_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
chrono = "0.4"
encoding_rs = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-single-instance = "2"
keyring = "3"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
